# gendiff

./: .coverage  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-app.yml
gendiff/: _init_.py  cli.py  const.py  diff.py  generate_diff.py  parse_files.py
gendiff/formatters/: __init__.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: result_nested_json.txt
